[gd_scene load_steps=2 format=3 uid="uid://ddnpte42dlg2p"]

[ext_resource type="Script" path="res://SpinMenu.gd" id="1_8sxc0"]

[node name="SpinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sxc0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 123.0
offset_bottom = 69.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spin" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spin"

[node name="ConfirmMagic" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm Magic"

[node name="LabelMagicShown" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 3.0
offset_right = 168.0
offset_bottom = 26.0

[node name="LabelSpinsShown" type="Label" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 5.0
offset_right = 316.0
offset_bottom = 31.0
text = "Text"

[node name="textbox" type="Label" parent="."]
layout_mode = 0
offset_left = 223.0
offset_top = 4.0
offset_right = 265.0
offset_bottom = 30.0
scale = Vector2(1, 0.987903)
text = "Spins"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Spin" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConfirmMagic" to="." method="_on_button_2_pressed"]
